k8s/deployment-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vaale-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: vaale-api
  name: vaale-bankpayment-service
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vaale-bankpayment-service
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vaale-bankpayment-service
    spec:
      serviceAccountName: vaale-prod-secret-manager
      volumes:
      - name: api-secret
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "aws-secret-vaale-application"
      containers:
      - image: 264532671857.dkr.ecr.us-east-1.amazonaws.com/vaale-prod-images-2:vaale-bankpayment-ms
        imagePullPolicy: Always
        name: vaale-bankpayment-service
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: api-secret
          mountPath: "/mnt/secrets-store"
          readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  namespace: vaale-api
  name: vaale-bankpayment-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: vaale-bankpayment-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: vaale-api
  name: ingress-vaale-bankpayment-service
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vaale-bankpayment-service
              port:
                number: 5000
